crates/rome_diagnostics/tests/macros/unknown_field_attr.stderr
error: cannot find attribute `unknown_attr` in this scope
 --> tests/macros/unknown_field_attr.rs:5:7
  |
5 |     #[unknown_attr]
  |       ^^^^^^^^^^^^
