crates/rome_diagnostics/tests/macros/unknown_field_attr.rs
use rome_diagnostics::Diagnostic;

#[derive(Debug, Diagnostic)]
struct TestDiagnostic {
    #[unknown_attr]
    field: bool,
}

fn main() {}
